# QRCodeGen

./: CMakeLists.txt  README.md  main.cpp  package.proto
